<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.practicum.android.diploma.details.presentation.ui.SimilarVacancyFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/margin_16">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_64"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_icon"
            android:contentDescription="back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/arrow_back"/>

        <TextView
            style="@style/Text_Medium_22_500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:text="@string/similar_vacancies"
            android:textColor="?attr/black_to_white_color" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/search_result"
        style="@style/Text_Regular_16_400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:background="@drawable/field_for_result_text"
        android:gravity="center"
        android:paddingHorizontal="@dimen/margin_12"
        android:paddingVertical="@dimen/margin_4"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="@string/no_vacancies" />

    <TextView
        android:id="@+id/refresh_button"
        style="@style/Text_Medium_16_500"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_59"
        android:background="@drawable/field_for_result_text"
        android:text="@string/repeat_loading"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/search_result"
        android:layout_marginTop="@dimen/margin_48"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/vacancy_view"
        tools:itemCount="20"/>

</androidx.constraintlayout.widget.ConstraintLayout>