<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ru.practicum.android.diploma.filters.ui.fragment.FragmentPlaceOfWork">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        style="@style/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        style="@style/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_16" />

    <ImageView
        android:id="@+id/arrowback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_12"
        android:paddingEnd="@dimen/logo_padding_8"
        android:paddingVertical="@dimen/logo_padding_8"
        />

    <TextView
        android:id="@+id/choose_textview"
        style="@style/Text_Medium_22_500"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/logo_padding_8"
        android:paddingVertical="@dimen/logo_padding_8"
        android:text="@string/choose_place_of_work"
        android:textColor="?attr/black_to_white_color"
        app:layout_constraintBottom_toBottomOf="@+id/arrowback"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toEndOf="@+id/arrowback"
        app:layout_constraintTop_toTopOf="@+id/arrowback" />




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/country"
        android:layout_width="0dp"
        android:layout_height="@dimen/weight_height_60"
        android:layout_marginTop="@dimen/margin_35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_textview"
        app:layout_constraintEnd_toStartOf="@+id/choose_country_bottom"
        android:textColorHint="@color/gray"
        android:enabled="false"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:visibility="visible"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/countryEditText"
            style="@style/Text_Regular_16_400"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/white2_to_black2_color"
            android:hint="@string/country"
            android:textColor="?attr/gray_to_white_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/choose_country_bottom"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/weight_height_60"
        android:paddingStart="@dimen/logo_padding_20"
        android:src="@drawable/arrow_forward"
        app:layout_constraintBottom_toBottomOf="@+id/country"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintTop_toTopOf="@+id/country"
        android:visibility="visible"/>
    <ImageView
        android:id="@+id/clear_country_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/weight_height_60"
        android:paddingStart="@dimen/logo_padding_20"
        android:src="@drawable/close"
        app:layout_constraintBottom_toBottomOf="@+id/country"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintTop_toTopOf="@+id/country"
        android:visibility="gone"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/region"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country"
        app:layout_constraintEnd_toStartOf="@+id/region_button"
        android:textColorHint="@color/gray"
        android:enabled="false"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:visibility="visible"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regionEditText"
            style="@style/Text_Regular_16_400"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/gray_to_white_color"
            android:backgroundTint="?attr/white2_to_black2_color"
            android:hint="@string/region" />
    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
        android:id="@+id/region_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/weight_height_60"
        android:paddingStart="@dimen/logo_padding_20"
        android:src="@drawable/arrow_forward"
        app:layout_constraintBottom_toBottomOf="@+id/region"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintTop_toTopOf="@+id/region"
        android:visibility="visible"/>
    <ImageView
        android:id="@+id/clear_region"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/weight_height_60"
        android:paddingStart="@dimen/logo_padding_20"
        android:src="@drawable/close"
        app:layout_constraintBottom_toBottomOf="@+id/region"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintTop_toTopOf="@+id/region"
        android:visibility="gone"/>

    <TextView
        android:id="@id/button_apply"
        style="@style/Text_Medium_16_500"
        android:layout_width="0dp"
        android:layout_height="@dimen/weight_height_60"
        android:layout_marginBottom="@dimen/margin_24"
        android:background="@drawable/field_for_result_text"
        android:gravity="center"
        android:text="@string/choose"
        android:textColor="@color/white_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>